[package]
name = "diaryx_math_extism"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-latex = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
